# basic-cmake-project1

./: README.md
a/: CMakeLists.txt  ProjectAConfig.cmake.in  a.cpp
b/: CMakeLists.txt  b.cpp
b/include/b/: b.h
